--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #0A0A0A;
+    background-color: #0F0F0F;
     color: #ffffff;
 }
 
@@ -105,6 +105,6 @@ input[type="text"], select {
 }
 
 .left-sidebar {
-    max-width: 580px;
-    background-color: #1D1D1D;
+    width: 250px;
+    background-color: #1A1A1A;
 }
