--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -96,11 +96,10 @@ body {
     color: #FFFFFF;
 }
 
-#new-chat-btn::before {
-    content: "+";
+#new-chat-btn svg {
     margin-right: 0.5rem;
-    font-size: 1.25rem;
-    font-weight: bold;
+    width: 1.25rem;
+    height: 1.25rem;
 }
 
 #notes-list div {
