--- a/templates/chat.html
+++ b/templates/chat.html
@@ -51,6 +51,7 @@
                         <button type="submit" class="btn btn-primary">Send</button>
                     </div>
                 </form>
+                <button id="use-selected-notes" class="btn btn-secondary mb-4">Use Selected Notes</button>
             </div>
 
             <!-- Notes Sidebar -->
