--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,21 +1,34 @@
 @import 'https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css';
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;600&display=swap');
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #0F0F0F;
     color: #ffffff;
+    background: #0F0F0F;
+    background-image: radial-gradient(#232323 1px, transparent 0);
+    background-size: 20px 20px;
+    background-position: -19px -19px;
+}
+
+body p, body .custom-dropdown, .user-message, .ai-message {
+    font-size: 14px;
+    font-family: "Work Sans", system-ui;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
 }
 
 .container {
     max-width: 100%;
-    padding: 1rem;
 }
 
 .chat-container {
     height: calc(100vh - 200px);
     overflow-y: auto;
-    background-color: #0F0F0F;
     color: #e0e0e0;
+    -webkit-mask-image: linear-gradient(to top, #1D1D1D 85%, transparent 100%);
+    mask-image: linear-gradient(to top, #1D1D1D 85%, transparent 100%);
 }
 
 .notes-sidebar {
@@ -31,6 +44,7 @@ body {
 }
 
 .message {
+    font-size: 18px;
     margin-bottom: 1rem;
     padding: 0.75rem;
     border-radius: 0.5rem;
@@ -39,14 +53,16 @@ body {
 }
 
 .user-message {
-    background-color: #1D1D1D;
+    font-size: 18px;
+    line-height: 1.8;
     color: #CBCBCB;
     margin-left: auto;
-    text-align: right;
+    text-align: left;
 }
 
 .ai-message {
-    background-color: #292929;
+    font-size: 18px;
+    line-height: 1.8;
     color: #CBCBCB;
 }
 
@@ -78,12 +94,12 @@ body {
 }
 
 #new-chat-btn {
+    max-width: 200px;
     background-color: transparent;
-    border: 2px solid #4A5568;
-    color: #E2E8F0;
+    border: 2px solid #CFAEFE;
+    color: #FAFAFA;
     border-radius: 9999px;
     padding: 0.5rem 1rem;
-    margin: 0 0 1.5rem 0;
     transition: all 0.3s ease;
     display: flex;
     align-items: center;
@@ -92,8 +108,9 @@ body {
 }
 
 #new-chat-btn:hover {
-    border-color: #63B3ED;
-    color: #FFFFFF;
+    background-color: #4F455E;
+    color: #9D79FF;
+    border: 2px solid #9D79FF;
 }
 
 #new-chat-btn svg {
@@ -103,12 +120,14 @@ body {
 }
 
 #notes-list div {
-    border-radius: .25rem;
+    border-radius: 1.2rem;
     background-color: #1D1D1D;
-    padding: 10px;
+    padding: 6px;
     overflow: hidden;
     text-overflow: ellipsis;
     margin-bottom: 0.5rem;
+    -webkit-mask-image: linear-gradient(to bottom, #1D1D1D 80%, transparent 100%);
+    mask-image: linear-gradient(to bottom, #1D1D1D 80%, transparent 100%);
 }
 
 #notes-list {
@@ -118,7 +137,7 @@ body {
 input[type="text"], select {
     width: 100%;
     padding: 0.5rem;
-    border-radius: 0.50rem;
+    border-radius: 0.2rem;
     font-size: 1rem;
     background-color: #1D1D1D;
     color: #e0e0e0;
@@ -141,8 +160,12 @@ input[type="text"]:focus, select:focus {
 }
 
 .page-title {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
     text-align: center;
     color: #ffffff;
+    margin-top: 24px;
 }
 
 .left-sidebar {
@@ -195,19 +218,28 @@ label {
 }
 
 .custom-dropdown {
+    font-size: 14px;
+    font-kerning: normal;
     background-color: #343434;
     color: #ffffff;
-    border: 1px solid #4a4a4a;
-    border-radius: 0.25rem;
+    border: 1px solid #000000;
+    border-radius: 0.5rem;
     padding: 0.5rem;
     width: 100%;
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='%23ffffff' viewBox='0 0 16 16'%3E%3Cpath d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/%3E%3C/svg%3E");
+    box-shadow: inset 0.1em 0.1em 0.1em 0 rgb(96, 96, 96,0.5), inset -0.1em -0.1em 0.1em 0 rgb(35, 35, 35,0.5);
     background-repeat: no-repeat;
     background-position: right 0.75rem center;
     background-size: 12px;
+}
+
+#category-filter.custom-dropdown {
+    text-transform: uppercase;
+    width: 50%;
+    padding-left: 20px;
 }
 
 .custom-dropdown:focus {
@@ -222,50 +254,72 @@ label {
     padding: 0.5rem;
 }
 
-.notes-icon {
-    display: inline-block;
-    width: 1.5rem;
-    height: 1.5rem;
-    margin-right: 0.5rem;
-    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" /></svg>');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-}
-
 .note-item {
+    width: 98%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     padding: 0.5rem;
     margin-bottom: 0.5rem;
     background-color: #1D1D1D;
     border-radius: 0.25rem;
+    transition: background-color 0.3s ease;
+}
+
+.note-item.selected {
+    background-color: #2D2D2D;
+    border: 1px solid #CFAEFE;
 }
 
 .note-select {
     appearance: none;
     width: 1.25rem;
     height: 1.25rem;
-    border: 2px solid #60a5fa;
-    border-radius: 50%;
-    margin-right: 0.75rem;
+    border: 2px solid #CFAEFE;
+    border-radius: 0.25rem;
+    margin: 0.75rem;
     cursor: pointer;
     flex-shrink: 0;
     transition: background-color 0.3s ease;
 }
 
 .note-select:checked {
-    background-color: #60a5fa;
+    background-color: #CFAEFE;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20' fill='%23000000'%3E%3Cpath d='M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z'/%3E%3C/svg%3E");
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .note-content {
+    width: 100%;
+    height: 260px;
     flex-grow: 1;
     overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
 }
 
 .note-actions {
     display: flex;
-    gap: 0.5rem;
 }
+
+.delete-note-btn svg{
+    width: 24px;
+    height: 24px;
+    color: #C4C4C4;
+}
+
+/* Scrollbars */
+#notes-list::-webkit-scrollbar, .chat-container::-webkit-scrollbar  {
+    width: 0.2em;
+}
+
+#notes-list::-webkit-scrollbar-track, .chat-container::-webkit-scrollbar-track {
+  background-color: #000000;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+#notes-list::-webkit-scrollbar-thumb, .chat-container::-webkit-scrollbar-thumb {
+  background-color: #0A0A0A;
+  outline: 1px solid #0A0A0A;
+}
+
+.chat-container 
