--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Chat with Notes</title>
+    <title>Neurathor</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-    <div class="container mx-auto p-4">
+    <div class="container mx-auto">
         <div class="flex h-full">
             <!-- Left Sidebar -->
             <div class="w-1/4 left-sidebar p-4 flex flex-col rounded-lg shadow-md mr-4">
-                <h2 class="text-xl font-bold mb-4 text-gray-300">Chat Sessions</h2>
-                <button id="new-chat-btn" class="w-full">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline-block mr-2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
-                    </svg>
-                    New Chat
-                </button>
+                <div class="flex flex-row items-center justify-between">
+                    <h2 class="text-xl font-bold text-gray-300">Chat Sessions</h2>
+                    <button id="new-chat-btn" class="w-full">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 inline-block mr-2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
+                        </svg>
+                        New Chat
+                    </button>
+                </div>
                 <ul id="chat-sessions" class="mb-4 chat-sessions overflow-y-auto">
                     <!-- Chat sessions will be added here dynamically -->
                 </ul>
@@ -43,7 +45,7 @@
 
             <!-- Main Chat Area -->
             <div class="flex-1 flex flex-col mr-4">
-                <h1 class="text-3xl font-bold page-title">AI Chat with Notes</h1>
+                <h1 class="text-3xl font-bold page-title">Neurathor</h1>
                 <div class="chat-container p-4"></div>
                 <form id="chat-form" class="p-4">
                     <div class="flex">
@@ -55,8 +57,8 @@
             </div>
 
             <!-- Notes Sidebar -->
-            <div id="notes-wrapper" class="w-1/6 p-4">
-                <h2 class="text-xl font-bold mb-2 text-zinc-200"><span class="notes-icon"></span>Notes</h2>
+            <div id="notes-wrapper" class="w-1/5 p-4">
+                <h2 class="text-xl font-bold mb-2 text-zinc-200">Notes</h2>
                 <div class="mb-4">
                     <input type="text" id="search-input" placeholder="Search notes...">
                 </div>
