--- a/templates/chat.html
+++ b/templates/chat.html
@@ -53,7 +53,6 @@
                         <button type="submit" class="btn btn-primary">Send</button>
                     </div>
                 </form>
-                <button id="use-selected-notes" class="btn btn-secondary mb-4">Use Selected Notes</button>
             </div>
 
             <!-- Notes Sidebar -->
@@ -67,6 +66,7 @@
                         <option value="">All Categories</option>
                     </select>
                 </div>
+                <button id="use-selected-notes" class="btn btn-secondary mb-4 hidden">Use Selected Notes</button>
                 <div id="notes-list" class="notes-sidebar"></div>
             </div>
         </div>
